k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toolshare-lib-staging
  namespace: colossus-toolshare-lib-staging
  labels:
    app: toolshare-lib-staging
    managed-by: colossus
spec:
  type: ClusterIP
  selector:
    app: toolshare-lib-staging
  ports:
    - port: 80
      targetPort: 80
